# core/pkg/requests/auth.go
@@ -5,6 +5,11 @@ type LoginRequest struct {
 	Password string `json:"password" binding:"required"`
 }
 
+type EnrollRequest struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
 type RefreshRequest struct {
 	UserID       string `json:"user_id" binding:"required"`
 	RefreshToken string `json:"refresh_token" binding:"required"`
