# core/pkg/responses/responses.go
@@ -1,5 +1,9 @@
 package responses
 
+type StatusResponse struct {
+	Enrolled bool `json:"enrolled"`
+}
+
 type AuthResponse struct {
 	AuthToken    string   `json:"auth_token"`
 	RefreshToken string   `json:"refresh_token"`
